[package]
name = "lru"
version = "0.7.6"
authors = ["Jerome Froelich <jeromefroelic@hotmail.com>"]
description = "A LRU cache implementation"
homepage = "https://github.com/jeromefroe/lru-rs"
repository = "https://github.com/jeromefroe/lru-rs.git"
documentation = "https://docs.rs/lru/"
readme = "README.md"
license = "MIT"
keywords = ["LRU", "cache"]

[features]
default = ["hashbrown/nightly"]

[dependencies]
hashbrown = "0.12"
criterion = "0.3"
rand = { version = "0.8", features = ["small_rng"] }

[dev-dependencies]
scoped_threadpool = "0.1.*"
stats_alloc = "0.1.*"
